<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">INRIX Reference Traffic App</string>
    <string name="main_map_title">Map</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="traffic_index_text_bucket0">Severe</string>
	<string name="traffic_index_text_bucket1">Heavy</string>
	<string name="traffic_index_text_bucket2">Mild</string>
	<string name="traffic_index_text_bucket3">Free Flow</string>
	<string name="pretripnotification_default_time">--:--</string>
	<string name="to_home">To Home</string>
	<string name="to_work">To Work</string>
	<string name="setup_home">Setup Home</string>
	<string name="setup_work">Setup Work</string>
	<string name="incident_type">Incident type</string>
	<string name="incident_type_accident">Accident</string>
	<string name="incident_type_hazard">Hazard</string>
	<string name="incident_type_congestion">Congestion</string>
	<string name="incident_type_event">Event</string>
	<string name="incident_type_construction">Construction</string>
	<string name="incident_type_road_closure">Road Closure</string>
	<string name="incident_type_police">Police</string>
	<string name="incident_type_wrond_traffic_color">Wrong Traffic Color</string>
	<string name="report_side_my_side">My Side</string>
	<string name="report_side_other_side">Other Side</string>
	<string name="dismiss">Dismiss</string>
	<string name="reroute">Reroute</string>
	<string name="reported">Reported!</string>
	<string name="report_incident">Report an Incident</string>
	<string name="incident_report_success">Thank you. Your incident was successfully reported.</string>
	<string name="incident_report_failed">Unable to report incident</string>
	<string name="incident_repoort_no_location">Couldn\'t retrieve location</string>
	<string name="edit_button">Edit</string>
	<string name="incidents">Incidents</string>
	<string name="you_are_here">You are here</string>
	<string name="app_not_found">Application to handle this request not found. Install a browser</string>
	<string name="follow_me">Follow me</string>
	<string name="refresh">Refresh</string>
	<string name="view">View</string>
	<string name="zoom_in">Zoom In</string>
	<string name="zoom_out">Zoom Out</string>
	<string name="location">location</string>
	<string name="confirm">Confirm</string>
	<string name="all_clear">All Clear</string>
	<string name="delete">Delete</string>
	<string name="submit">Submit</string>
	<string name="travel_time_d_hr_min">d\'d\' H\'h\' m\'m\'</string>
	<string name="travel_time_hr_min">H\'h\' m\'m\'</string>
	<string name="travel_time_min">m\'m\'</string>
	<string name="route_title_format">%1$s - %2$s</string>
	<string name="incident_details_reported_time_upcoming">Upcoming</string>
	<string name="incident_details_reported_time_format">%sm ago</string>
	<string name="incident_details_distance_format">%smi</string>
	<string name="dtw_incident_details_reported_time_format">min ago</string>
	<string name="dtw_incident_details_distance_format">mi away</string>
	<string name="incident_details_reported_time_overflow">>60</string>
	<string name="unable_to_confirm_incident">Unable to confirm incident</string>
	<string name="unable_to_delete_incident">Unable to delete incident</string>
	<string name="already_reviewed_incident">You have already reviewed this incident</string>
	<string name="thank_you">Thank you!</string>
	<string name="accident">Accident</string>
	<string name="construction">Construction</string>
	<string name="event">Event</string>
	<string name="congestion">Congestion</string>
	<string name="hazard">Hazard</string>
	<string name="police">Police</string>
	<string name="beta_expired_message">Please uninstall it and install latest version from Google Play Store.</string>
    <string name="beta_expired_title">Traffic App Beta Expired</string>
    <string name="network_error">Network error</string>
    <string name="error_location_services_off">Location Services are off</string>
    <string name="error_network_unavailable">Network Unavailable</string>
    <string name="error_current_location_unavailable">Could not get current location</string>
    <string name="error_server_error">Server error</string>
    <string name="add_home_label">Add Home</string>
    <string name="add_work_label">Add Work</string>
    <string name="edit_home_label">Edit Home</string>
    <string name="edit_work_label">Edit Work</string>
    <string name="current_location">Current Location</string>
    <string name="miles_label">mi</string>
    <string name="save_label">SAVE</string>
    <string name="search_results_label">Search Results</string>
    <string name="loading_label">Loading&#8230;</string>
    <string name="close">Close</string>
    <string name="incident_box_null">Unable to get incidents</string>
    <string name="status_panel_determining_quality">Determining traffic quality</string>
	<string name="create_edit_location_error_msg">Something went wrong</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="confirm_cancel_action">Current operation will be cancelled. Please confirm</string>
    <string name="support">Support</string>
    <string name="contact_support">Contact Support</string>
    <string name="legal">Legal</string>
    <string name="google_tc">Google\'s Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="inrix_terms_of_use">INRIX Terms of Use</string>
    <string name="copyright">Copyright &#169; 2008&#8211;2014. All Rights Reserved</string>
    <string name="powered_by">Powered by INRIX</string>
    <string name="version_format">v%1$s</string>
    <string name="warn_no_browser">Couldn\'t find a browser.</string>
    <string name="place_control_error">Could not load place</string>
    <string name="place_control_unroutable_route_error">Location is unroutable</string>
    <string name="place_control_route_error">Could not load route</string>
	<string name="ok_string">Yes</string>
	<string name="cancel_string">No</string>
	<string name="no_results">No Results Available</string>
	<string name="search_query_hint">Search for business or address</string>
	<string name="empty"></string>
</resources>