<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/about_fragment_padding_vertical"
        android:paddingLeft="@dimen/about_fragment_padding_horizontal"
        android:paddingRight="@dimen/about_fragment_padding_horizontal"
        android:paddingTop="@dimen/about_fragment_padding_vertical" >

        <com.inrix.reference.trafficapp.view.RobotoTextView
            style="@style/AboutTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <com.inrix.reference.trafficapp.view.AboutTitleCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_card_bottom_margin_big" />

        <com.inrix.reference.trafficapp.view.RobotoTextView
            style="@style/AboutTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support" />

        <com.inrix.reference.trafficapp.view.AboutCard
            android:id="@+id/card_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_card_bottom_margin_big"
            custom:text="@string/contact_support" />

        <com.inrix.reference.trafficapp.view.RobotoTextView
            style="@style/AboutTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legal" />

        <com.inrix.reference.trafficapp.view.AboutCard
            android:id="@+id/card_terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:text="@string/inrix_terms_of_use" />
        <com.inrix.reference.trafficapp.view.AboutCard
            android:id="@+id/card_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:text="@string/privacy_policy" />

        <com.inrix.reference.trafficapp.view.AboutCard
            android:id="@+id/card_google_tc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_card_bottom_margin_big"
            custom:text="@string/google_tc" />

        <com.inrix.reference.trafficapp.view.RobotoTextView
            style="@style/AboutTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/about_copyright_padding_left"
            android:text="@string/copyright"
            android:textSize="@dimen/about_copyright_text_size" />
    </LinearLayout>

</ScrollView>