<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.inrix.reference.trafficapp.view.TouchableFrameLayout
        android:id="@+id/map_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </com.inrix.reference.trafficapp.view.TouchableFrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/report_button"
            style="@style/Widget.MapControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:contentDescription="@string/report_incident"
        	android:layout_marginBottom="@dimen/main_map_report_control_bottom_space"
        	android:src="@drawable/report_button" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="@dimen/main_map_zoom_controls_right_space"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/zoom_in_button"
            style="@style/Widget.MapControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/zoom_in"
            android:src="@drawable/zoom_in" />
        <ImageView
            android:id="@+id/zoom_out_button"
            style="@style/Widget.MapControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/zoom_out"
            android:src="@drawable/zoom_out" />
        <ImageView
	        android:id="@+id/follow_me_button"
	        style="@style/Widget.MapControlButton"
	        android:layout_marginTop="@dimen/main_map_zoom_followme_space"
	        android:layout_marginBottom="@dimen/main_map_zoom_followme_bottom_margin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/follow_me"
	        android:src="@drawable/follow_me_button_selector" />
    </LinearLayout>
    <com.inrix.reference.trafficapp.view.TrafficStatusPanel
        android:id="@+id/traffic_status_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</FrameLayout>