<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/navigation_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/selectable_item_background"
        android:clickable="true" >

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/location_picker_title_height"
            android:layout_marginLeft="@dimen/location_picker_search_title_margin"
            android:contentDescription="@string/location"
            android:src="@drawable/back_button" />

        <com.inrix.reference.trafficapp.view.RobotoTextView
            android:id="@+id/place_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/location_picker_title_height"
            android:layout_marginLeft="@dimen/location_picker_search_title_margin"
            android:layout_marginRight="@dimen/location_picker_search_title_margin"
            android:gravity="left|center_vertical"
            android:text="@string/to_home"
            android:textSize="@dimen/location_title_text_size" />

    </LinearLayout>

    <SearchView
        android:id="@+id/places_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/location_picker_search_bar_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/navigation_control"
        android:iconifiedByDefault="false"
        android:imeOptions="actionSearch"
        android:queryHint="@string/search_query_hint" >
    </SearchView>

</RelativeLayout>