<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/report_incident_layout_padding"
    android:paddingRight="@dimen/report_incident_layout_padding" >

    <com.inrix.reference.trafficapp.view.RobotoTextView
        android:id="@+id/report_incident_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/report_incident_title_padding"
        android:text="@string/report_incident"
        android:textColor="@android:color/black"
        android:textSize="@dimen/report_incident_title_text_size" />

    <ImageView
        android:id="@+id/img_incident_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_incident_title"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/incident_type"
        android:paddingBottom="@dimen/report_incident_type_logo_padding"
        android:paddingTop="@dimen/report_incident_type_logo_padding" />

    <LinearLayout
        android:id="@+id/report_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_incident_type"
        android:orientation="vertical"
        android:paddingLeft="@dimen/report_info_layout_padding_left"
        android:paddingTop="@dimen/report_info_layout_padding_top" >

        <com.inrix.reference.trafficapp.view.RobotoTextView
            android:id="@+id/txt_report_time_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/report_type_time_color"
            android:textSize="@dimen/report_incident_info_text_size" />

        <com.inrix.reference.trafficapp.view.RobotoTextView
            android:id="@+id/txt_report_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/report_incident_info_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/side_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/report_incident_dismiss_button_bottom_margin"
            android:layout_marginLeft="@dimen/report_incident_dismiss_button_partial_margin"
            android:layout_marginRight="@dimen/report_incident_dismiss_button_partial_margin"
            android:layout_weight="1" >

            <com.inrix.reference.trafficapp.view.RobotoTextView
                android:id="@+id/my_side_btn_txt"
                style="@style/ButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/my_side_confirm"
                android:text="@string/report_side_my_side" />

            <com.inrix.reference.trafficapp.view.RobotoTextView
                android:id="@+id/other_side_btn_txt"
                style="@style/ButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/other_side_confirm"
                android:text="@string/report_side_other_side"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dismiss_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/report_incident_dismiss_button_bottom_margin"
            android:layout_marginLeft="@dimen/report_incident_dismiss_button_partial_margin"
            android:layout_marginRight="@dimen/report_incident_dismiss_button_partial_margin"
            android:layout_weight="1" >

            <TextView
                style="@style/ButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>