<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/location_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/places_list_title_height"
        android:background="@color/location_bar_background_color" >

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/place_title"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/route_card_side_space"
            android:contentDescription="@string/location"
            android:src="@drawable/home" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/location_edit_button_height"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/route_card_side_space"
            android:background="@drawable/edit_btn_background"
            android:text="@string/edit_button" />

        <com.inrix.reference.trafficapp.view.RobotoTextView
            android:id="@+id/place_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/edit_button"
            android:layout_toRightOf="@+id/location_icon"
            android:text="@string/to_home"
            android:textSize="@dimen/location_title_text_size" />
    </RelativeLayout>

    <com.inrix.reference.trafficapp.view.ErrorCard
        android:id="@+id/place_error_card"
        style="@style/Card.Error"
        android:layout_width="match_parent"
        android:layout_height="@dimen/route_card_height"
        android:animateLayoutChanges="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/route_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>